--- a/Resume_NLP_final.ipynb
+++ b/Resume_NLP_final.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Automatic AI Resume Screening "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# preprocessing"
    ]
   },
@@ -16,10 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "import nltk\n",
     "from nltk.corpus import wordnet\n",
     "def get_wordnet_pos(word):\n",
@@ -41,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,101 +179,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# processing "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### resume_matcher"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nltk.download('averaged_perceptron_tagger')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nltk.download('wordnet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nltk.download('punkt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "def process_files(req_document,resume_docs):\n",
-    "    req_doc_text = get_content_as_string(req_document)\n",
-    "    resume_doc_text = []\n",
-    "    for doct in resume_docs:\n",
-    "        resume_doc_text.append(get_content_as_string(doct))\n",
-    "\n",
-    "    cos_sim_list = get_tf_idf_cosine_similarity(req_doc_text,resume_doc_text)\n",
-    "    print(cos_sim_list)\n",
-    "    final_doc_rating_list = []\n",
-    "    zipped_docs = zip(cos_sim_list,resume_docs)\n",
-    "    sorted_doc_list = sorted(zipped_docs, key = lambda x: x[0], reverse=True)\n",
-    "    for element in sorted_doc_list:\n",
-    "        doc_rating_list = []\n",
-    "        doc_rating_list.append(os.path.basename(element[1]))\n",
-    "        doc_rating_list.append(\"{:.0%}\".format(element[0]))\n",
-    "        final_doc_rating_list.append(doc_rating_list)\n",
-    "    return final_doc_rating_list\n",
-    "    \n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "     req_document = '/home/ashok/Desktop/GEP_Techathon/jobdescription/req.txt'\n",
-    "     resume_docs = ['/home/ashok/Desktop/GEP_Techathon/resume/resume1.txt',\n",
-    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume2.txt',\n",
-    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume3.txt',\n",
-    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume4.txt',\n",
-    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume5.txt']\n",
-    "     final_doc_rating_list=process_files(req_document,resume_docs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_doc_rating_list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Name Extraction from Resume"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,34 +195,50 @@
     "def extract_name(resume_text):\n",
     "    nlp_text = nlp(resume_text)\n",
     "    pattern = [{'POS': 'PROPN'}, {'POS': 'PROPN'}]\n",
-    "    matcher.add('NAME',[pattern])\n",
+    "    matcher.add('FULL_NAME', [pattern])\n",
     "    matches = matcher(nlp_text)\n",
     "    for match_id, start, end in matches:\n",
     "        span = nlp_text[start:end]\n",
-    "        return span.text"
+    "        return span.text\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package maxent_ne_chunker to\n",
+      "[nltk_data]     /home/ashok/nltk_data...\n",
+      "[nltk_data]   Package maxent_ne_chunker is already up-to-date!\n",
+      "[nltk_data] Downloading package words to /home/ashok/nltk_data...\n",
+      "[nltk_data]   Package words is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "nltk.download('maxent_ne_chunker')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "nltk.download('maxent_ne_chunker')\n",
     "nltk.download('words')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,25 +250,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "resume_docs = ['/home/ashok/Desktop/GEP_Techathon/resume/resume1.txt',\n",
-    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume2.txt',\n",
-    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume3.txt',\n",
-    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume4.txt',\n",
-    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume5.txt']\n",
-    "for doc in resume_docs:\n",
-    "    resume_txt = get_resume_txt(doc)\n",
-    "    name = extract_name(resume_txt)\n",
-    "    print(name)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -342,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,16 +268,168 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# processing \n",
+    "### resume_matcher"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /home/ashok/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n",
+      "[nltk_data] Downloading package wordnet to /home/ashok/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to /home/ashok/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('averaged_perceptron_tagger')\n",
+    "nltk.download('wordnet')\n",
+    "nltk.download('punkt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from tika import parser  \n",
+    "import unicodedata\n",
+    "import os\n",
+    "import sys\n",
+    "import re\n",
+    "\n",
+    "\n",
+    "def is_pua(c):\n",
+    "    return unicodedata.category(c) == 'Co'\n",
+    "\n",
+    "\n",
+    "\n",
+    "def process_files(req_document,resume_docs):\n",
+    "    if req_document.endswith(\".pdf\") or req_document.endswith(\".txt\") or req_document.endswith(\".docx\") or req_document.endswith(\".doc\"):   \n",
+    "        parsed_pdf = parser.from_file(req_document)\n",
+    "        job_description_txt = parsed_pdf['content'] \n",
+    "        job_description_txt = \"\".join([char for char in job_description_txt if not is_pua(char)])\n",
+    "        job_description_txt = job_description_txt.replace('\\n', ' ')\n",
+    "        job_description_txt = re.sub('\\W+', ' ', job_description_txt) #Select only alpha numerics\n",
+    "        job_description_txt = re.sub('[^A-Za-z]+', ' ', job_description_txt) #select only alphabet characters\n",
+    "        job_description_txt = job_description_txt.lower()\n",
+    "    \n",
+    "    all_resume_txt = []\n",
+    "    for filename in resume_docs:\n",
+    "        if filename.endswith(\".pdf\") or filename.endswith(\".txt\") or filename.endswith(\".docx\") or filename.endswith(\".doc\"):\n",
+    "            \n",
+    "            parsed_pdf = parser.from_file(filename)\n",
+    "            data = parsed_pdf['content'] \n",
+    "            data = \"\".join([char for char in data if not is_pua(char)])\n",
+    "            data = data.replace('\\n', ' ')\n",
+    "            data = re.sub('\\W+', ' ', data) #Select only alpha numerics\n",
+    "            data = re.sub('[^A-Za-z]+', ' ', data) #select only alphabet characters\n",
+    "            data = data.lower()\n",
+    "            all_resume_txt.append(data)\n",
+    "            \n",
+    "    req_doc_text = job_description_txt\n",
+    "    resume_doc_text = all_resume_txt\n",
+    "    list_name = []\n",
+    "    list_email = []\n",
+    "    for filename in resume_docs:\n",
+    "        if filename.endswith(\".pdf\") or filename.endswith(\".txt\") or filename.endswith(\".docx\") or filename.endswith(\".doc\"):\n",
+    "            parsed_pdf = parser.from_file(filename)\n",
+    "            data = parsed_pdf['content'] \n",
+    "            name = extract_name(data)\n",
+    "            data = \"\".join([char for char in data if not is_pua(char)])\n",
+    "            list_name.append(name)\n",
+    "            data = data.lower()\n",
+    "            email = extract_emails(data)\n",
+    "            list_email.append(email)\n",
+    "        \n",
+    "    cos_sim_list = get_tf_idf_cosine_similarity(req_doc_text,resume_doc_text)\n",
+    "    final_doc_rating_list = []\n",
+    "    zipped_docs = zip(cos_sim_list,resume_docs,list_name,list_email)\n",
+    "    sorted_doc_list = sorted(zipped_docs, key = lambda x: x[0], reverse=True)\n",
+    "    \n",
+    "\n",
+    "    for element in sorted_doc_list:\n",
+    "        doc_rating_list = []\n",
+    "        doc_rating_list.append(os.path.basename(element[1]))\n",
+    "        doc_rating_list.append(\"{:.0%}\".format(element[0]))\n",
+    "        doc_rating_list.append(element[2])\n",
+    "        doc_rating_list.append(element[3])\n",
+    "        final_doc_rating_list.append(doc_rating_list)\n",
+    "    return final_doc_rating_list\n",
+    "    \n",
+    "\n",
+    "                \n",
+    "if __name__ == \"__main__\":\n",
+    "     req_document = '/home/ashok/Desktop/GEP_Techathon/jobdescription/req.txt'\n",
+    "     resume_docs = ['/home/ashok/Desktop/GEP_Techathon/resume/resume1.txt',\n",
+    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume2.txt',\n",
+    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume3.txt',\n",
+    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume4.txt',\n",
+    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume5.txt',\n",
+    "                    '/home/ashok/Desktop/GEP_Techathon/resume/Ashok.pdf',\n",
+    "                    '/home/ashok/Desktop/GEP_Techathon/resume/Parallel Computing Lab 1.docx',\n",
+    "                    '/home/ashok/Desktop/GEP_Techathon/resume/resume_ashok.pdf']\n",
+    "     final_doc_rating_list=process_files(req_document,resume_docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Jaitsisar , Email:  ['ashokkumar26042000@gmail.com', 'ashokkumar26042000@gmail.com'] , Resume File name:  resume_ashok.pdf , Score:  63%\n",
+      "Rajendra Bhobhiya , Email:  ['name@company.com'] , Resume File name:  resume5.txt , Score:  61%\n",
+      "Pooja Bhobhiya , Email:  ['test@test.com'] , Resume File name:  resume4.txt , Score:  56%\n",
+      "Meenu Kumari , Email:  ['kumar@gmail.com'] , Resume File name:  resume3.txt , Score:  50%\n",
+      "Tech| National , Email:  ['ashokkumar26042000@gmail.com'] , Resume File name:  Ashok.pdf , Score:  50%\n",
+      "Manish Kumar , Email:  ['ashok@gep.com'] , Resume File name:  resume2.txt , Score:  43%\n",
+      "Ashok Bhobhiya , Email:  ['akbhobhiya2000@gmaiil.com'] , Resume File name:  resume1.txt , Score:  35%\n",
+      "INFORMATION TECHNOLOGY , Email:  [] , Resume File name:  Parallel Computing Lab 1.docx , Score:  0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "for detail in final_doc_rating_list:\n",
+    "    print(detail[2],\", Email: \",detail[3], \", Resume File name: \", detail[0],\", Score: \",detail[1])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for doc in resume_docs:\n",
-    "    resume_txt = get_resume_txt(doc)\n",
-    "    email = extract_emails(resume_txt)\n",
-    "    print(email[0])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
